# net-slam

./: .gitignore  README.md  package-lock.json  package.json  regenerate_js_wasm.bash
backend/: package-lock.json  package.json
backend/src/: index.ts
cpp/: .gitignore  CMakeLists.txt
cpp/desktop_interface/: CMakeLists.txt  main.cpp
cpp/slam/: CMakeLists.txt  slam.cpp  slam.h
cpp/slam/idl/: idl_glue.cpp  idl_glue.js  slam.idl  slam_wrapper.cpp
cpp/test/: 2-hello-world.c  a.out.js  a.out.wasm  hello-world.html  hello-world.js  hello-world.wasm  test.cpp
cpp/vision/: CMakeLists.txt  CMakeSettings.json  main.cpp  orb.cpp  slam.cpp  slam.h
cpp/wasm-build/: output.js  output.wasm
cpp/wasm-build/web/: browser_slam.js
cpp/web/: CMakeLists.txt  emscripten_bindings.cpp  glue.cpp  glue.js  slam.idl  slam_wrapper.cpp
frontend/: .eslintignore  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: DashboardPanel.tsx  InfoPopup.css  InfoPopup.tsx  OnOfToggle.tsx  PhotoLoader.css  PhotoLoader.tsx  PhotoUploader.css  PhotoUploader.tsx  ResolutionSettings.tsx  ScannerView.tsx  SettingsPanel.tsx
frontend/src/components/ErrorPopup/: ErrorPopup.css  ErrorPopup.tsx  index.jsx
frontend/src/components/FullscreenPopup/: FullscreenPopup.css  FullscreenPopup.tsx  index.ts
frontend/src/core/: SlamInterfaces.ts
frontend/src/hooks/: useMediaQuery.ts  useOrbFeatures.ts  useSlamMetrics.tsx
frontend/src/pages/: ScanninPage.tsx
frontend/src/styles/: InfoPopup.css  OnOfToggle.css  ResolutionSettings.css
frontend/src/util/: image_ops.ts
frontend/src/wasm/: browser_slam.js  index.ts  load_wasm.d.ts  load_wasm.js  slam.ts
